--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>
       To-Do
     </title>
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -13,7 +13,7 @@
   <body>
     <div class="container">
       <div class="todo-box">
-        <h2>To-Do list  <img src="/icons/list.png"></h2>
+        <h2>To-Do list  <img src="icons/list.png"></h2>
         <div class="task-wrapper">
           <input class="task-bar" type="text" id="input-box" placeholder="Add your task..."><button onclick="addTask()" class="add-button">ADD</button>
         </div> 
@@ -26,6 +26,6 @@
       </div>
 
     </div>
-    <script src="/scrips.js"></script>
+    <script src="scrips.js"></script>
   </body>
 </html>
